parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> cmds
Rule 2     cmds -> cmd cmds
Rule 3     cmds -> cmd
Rule 4     cmd -> atribuicao
Rule 5     cmd -> impressao
Rule 6     cmd -> operacao
Rule 7     cmd -> repeticao
Rule 8     cmd -> selecao
Rule 9     atribuicao -> FACA VAR SER NUM PONTO
Rule 10    impressao -> MOSTRE VAR PONTO
Rule 11    impressao -> MOSTRE operacao PONTO
Rule 12    operacao -> SOME VAR COM VAR PONTO
Rule 13    operacao -> SOME VAR COM NUM PONTO
Rule 14    operacao -> SOME NUM COM NUM PONTO
Rule 15    operacao -> MULTIPLIQUE VAR POR VAR PONTO
Rule 16    operacao -> MULTIPLIQUE VAR POR NUM PONTO
Rule 17    operacao -> MULTIPLIQUE NUM POR NUM PONTO
Rule 18    operacao -> MULTIPLIQUE NUM POR VAR PONTO
Rule 19    repeticao -> REPITA NUM VEZES DOISPONTOS cmds FIM
Rule 20    selecao -> SE NUM ENTAO cmds
Rule 21    selecao -> SE NUM ENTAO cmds SENAO cmds
Rule 22    selecao -> SE NUM ENTAO cmds SENAO cmds FIM

Terminals, with rules where they appear

COM                  : 12 13 14
DOISPONTOS           : 19
ENTAO                : 20 21 22
FACA                 : 9
FIM                  : 19 22
MOSTRE               : 10 11
MULTIPLIQUE          : 15 16 17 18
NUM                  : 9 13 14 14 16 17 17 18 19 20 21 22
PONTO                : 9 10 11 12 13 14 15 16 17 18
POR                  : 15 16 17 18
REPITA               : 19
SE                   : 20 21 22
SENAO                : 21 22
SER                  : 9
SOME                 : 12 13 14
VAR                  : 9 10 12 12 13 15 15 16 18
VEZES                : 19
error                : 

Nonterminals, with rules where they appear

atribuicao           : 4
cmd                  : 2 3
cmds                 : 1 2 19 20 21 21 22 22
impressao            : 5
operacao             : 6 11
programa             : 0
repeticao            : 7
selecao              : 8

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . cmds
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . selecao
    (9) atribuicao -> . FACA VAR SER NUM PONTO
    (10) impressao -> . MOSTRE VAR PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) operacao -> . SOME VAR COM VAR PONTO
    (13) operacao -> . SOME VAR COM NUM PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (15) operacao -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) operacao -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) operacao -> . MULTIPLIQUE NUM POR NUM PONTO
    (18) operacao -> . MULTIPLIQUE NUM POR VAR PONTO
    (19) repeticao -> . REPITA NUM VEZES DOISPONTOS cmds FIM
    (20) selecao -> . SE NUM ENTAO cmds
    (21) selecao -> . SE NUM ENTAO cmds SENAO cmds
    (22) selecao -> . SE NUM ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    programa                       shift and go to state 1
    cmds                           shift and go to state 2
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    selecao                        shift and go to state 8

state 1

    (0) S' -> programa .



state 2

    (1) programa -> cmds .

    $end            reduce using rule 1 (programa -> cmds .)


state 3

    (2) cmds -> cmd . cmds
    (3) cmds -> cmd .
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . selecao
    (9) atribuicao -> . FACA VAR SER NUM PONTO
    (10) impressao -> . MOSTRE VAR PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) operacao -> . SOME VAR COM VAR PONTO
    (13) operacao -> . SOME VAR COM NUM PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (15) operacao -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) operacao -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) operacao -> . MULTIPLIQUE NUM POR NUM PONTO
    (18) operacao -> . MULTIPLIQUE NUM POR VAR PONTO
    (19) repeticao -> . REPITA NUM VEZES DOISPONTOS cmds FIM
    (20) selecao -> . SE NUM ENTAO cmds
    (21) selecao -> . SE NUM ENTAO cmds SENAO cmds
    (22) selecao -> . SE NUM ENTAO cmds SENAO cmds FIM

  ! shift/reduce conflict for FACA resolved as shift
  ! shift/reduce conflict for MOSTRE resolved as shift
  ! shift/reduce conflict for SOME resolved as shift
  ! shift/reduce conflict for MULTIPLIQUE resolved as shift
  ! shift/reduce conflict for REPITA resolved as shift
  ! shift/reduce conflict for SE resolved as shift
    $end            reduce using rule 3 (cmds -> cmd .)
    SENAO           reduce using rule 3 (cmds -> cmd .)
    FIM             reduce using rule 3 (cmds -> cmd .)
    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

  ! FACA            [ reduce using rule 3 (cmds -> cmd .) ]
  ! MOSTRE          [ reduce using rule 3 (cmds -> cmd .) ]
  ! SOME            [ reduce using rule 3 (cmds -> cmd .) ]
  ! MULTIPLIQUE     [ reduce using rule 3 (cmds -> cmd .) ]
  ! REPITA          [ reduce using rule 3 (cmds -> cmd .) ]
  ! SE              [ reduce using rule 3 (cmds -> cmd .) ]

    cmd                            shift and go to state 3
    cmds                           shift and go to state 15
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    selecao                        shift and go to state 8

state 4

    (4) cmd -> atribuicao .

    FACA            reduce using rule 4 (cmd -> atribuicao .)
    MOSTRE          reduce using rule 4 (cmd -> atribuicao .)
    SOME            reduce using rule 4 (cmd -> atribuicao .)
    MULTIPLIQUE     reduce using rule 4 (cmd -> atribuicao .)
    REPITA          reduce using rule 4 (cmd -> atribuicao .)
    SE              reduce using rule 4 (cmd -> atribuicao .)
    $end            reduce using rule 4 (cmd -> atribuicao .)
    SENAO           reduce using rule 4 (cmd -> atribuicao .)
    FIM             reduce using rule 4 (cmd -> atribuicao .)


state 5

    (5) cmd -> impressao .

    FACA            reduce using rule 5 (cmd -> impressao .)
    MOSTRE          reduce using rule 5 (cmd -> impressao .)
    SOME            reduce using rule 5 (cmd -> impressao .)
    MULTIPLIQUE     reduce using rule 5 (cmd -> impressao .)
    REPITA          reduce using rule 5 (cmd -> impressao .)
    SE              reduce using rule 5 (cmd -> impressao .)
    $end            reduce using rule 5 (cmd -> impressao .)
    SENAO           reduce using rule 5 (cmd -> impressao .)
    FIM             reduce using rule 5 (cmd -> impressao .)


state 6

    (6) cmd -> operacao .

    FACA            reduce using rule 6 (cmd -> operacao .)
    MOSTRE          reduce using rule 6 (cmd -> operacao .)
    SOME            reduce using rule 6 (cmd -> operacao .)
    MULTIPLIQUE     reduce using rule 6 (cmd -> operacao .)
    REPITA          reduce using rule 6 (cmd -> operacao .)
    SE              reduce using rule 6 (cmd -> operacao .)
    $end            reduce using rule 6 (cmd -> operacao .)
    SENAO           reduce using rule 6 (cmd -> operacao .)
    FIM             reduce using rule 6 (cmd -> operacao .)


state 7

    (7) cmd -> repeticao .

    FACA            reduce using rule 7 (cmd -> repeticao .)
    MOSTRE          reduce using rule 7 (cmd -> repeticao .)
    SOME            reduce using rule 7 (cmd -> repeticao .)
    MULTIPLIQUE     reduce using rule 7 (cmd -> repeticao .)
    REPITA          reduce using rule 7 (cmd -> repeticao .)
    SE              reduce using rule 7 (cmd -> repeticao .)
    $end            reduce using rule 7 (cmd -> repeticao .)
    SENAO           reduce using rule 7 (cmd -> repeticao .)
    FIM             reduce using rule 7 (cmd -> repeticao .)


state 8

    (8) cmd -> selecao .

    FACA            reduce using rule 8 (cmd -> selecao .)
    MOSTRE          reduce using rule 8 (cmd -> selecao .)
    SOME            reduce using rule 8 (cmd -> selecao .)
    MULTIPLIQUE     reduce using rule 8 (cmd -> selecao .)
    REPITA          reduce using rule 8 (cmd -> selecao .)
    SE              reduce using rule 8 (cmd -> selecao .)
    $end            reduce using rule 8 (cmd -> selecao .)
    SENAO           reduce using rule 8 (cmd -> selecao .)
    FIM             reduce using rule 8 (cmd -> selecao .)


state 9

    (9) atribuicao -> FACA . VAR SER NUM PONTO

    VAR             shift and go to state 16


state 10

    (10) impressao -> MOSTRE . VAR PONTO
    (11) impressao -> MOSTRE . operacao PONTO
    (12) operacao -> . SOME VAR COM VAR PONTO
    (13) operacao -> . SOME VAR COM NUM PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (15) operacao -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) operacao -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) operacao -> . MULTIPLIQUE NUM POR NUM PONTO
    (18) operacao -> . MULTIPLIQUE NUM POR VAR PONTO

    VAR             shift and go to state 17
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12

    operacao                       shift and go to state 18

state 11

    (12) operacao -> SOME . VAR COM VAR PONTO
    (13) operacao -> SOME . VAR COM NUM PONTO
    (14) operacao -> SOME . NUM COM NUM PONTO

    VAR             shift and go to state 19
    NUM             shift and go to state 20


state 12

    (15) operacao -> MULTIPLIQUE . VAR POR VAR PONTO
    (16) operacao -> MULTIPLIQUE . VAR POR NUM PONTO
    (17) operacao -> MULTIPLIQUE . NUM POR NUM PONTO
    (18) operacao -> MULTIPLIQUE . NUM POR VAR PONTO

    VAR             shift and go to state 21
    NUM             shift and go to state 22


state 13

    (19) repeticao -> REPITA . NUM VEZES DOISPONTOS cmds FIM

    NUM             shift and go to state 23


state 14

    (20) selecao -> SE . NUM ENTAO cmds
    (21) selecao -> SE . NUM ENTAO cmds SENAO cmds
    (22) selecao -> SE . NUM ENTAO cmds SENAO cmds FIM

    NUM             shift and go to state 24


state 15

    (2) cmds -> cmd cmds .

    $end            reduce using rule 2 (cmds -> cmd cmds .)
    SENAO           reduce using rule 2 (cmds -> cmd cmds .)
    FACA            reduce using rule 2 (cmds -> cmd cmds .)
    MOSTRE          reduce using rule 2 (cmds -> cmd cmds .)
    SOME            reduce using rule 2 (cmds -> cmd cmds .)
    MULTIPLIQUE     reduce using rule 2 (cmds -> cmd cmds .)
    REPITA          reduce using rule 2 (cmds -> cmd cmds .)
    SE              reduce using rule 2 (cmds -> cmd cmds .)
    FIM             reduce using rule 2 (cmds -> cmd cmds .)


state 16

    (9) atribuicao -> FACA VAR . SER NUM PONTO

    SER             shift and go to state 25


state 17

    (10) impressao -> MOSTRE VAR . PONTO

    PONTO           shift and go to state 26


state 18

    (11) impressao -> MOSTRE operacao . PONTO

    PONTO           shift and go to state 27


state 19

    (12) operacao -> SOME VAR . COM VAR PONTO
    (13) operacao -> SOME VAR . COM NUM PONTO

    COM             shift and go to state 28


state 20

    (14) operacao -> SOME NUM . COM NUM PONTO

    COM             shift and go to state 29


state 21

    (15) operacao -> MULTIPLIQUE VAR . POR VAR PONTO
    (16) operacao -> MULTIPLIQUE VAR . POR NUM PONTO

    POR             shift and go to state 30


state 22

    (17) operacao -> MULTIPLIQUE NUM . POR NUM PONTO
    (18) operacao -> MULTIPLIQUE NUM . POR VAR PONTO

    POR             shift and go to state 31


state 23

    (19) repeticao -> REPITA NUM . VEZES DOISPONTOS cmds FIM

    VEZES           shift and go to state 32


state 24

    (20) selecao -> SE NUM . ENTAO cmds
    (21) selecao -> SE NUM . ENTAO cmds SENAO cmds
    (22) selecao -> SE NUM . ENTAO cmds SENAO cmds FIM

    ENTAO           shift and go to state 33


state 25

    (9) atribuicao -> FACA VAR SER . NUM PONTO

    NUM             shift and go to state 34


state 26

    (10) impressao -> MOSTRE VAR PONTO .

    FACA            reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    MOSTRE          reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    SOME            reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    MULTIPLIQUE     reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    REPITA          reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    SE              reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    $end            reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    SENAO           reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)
    FIM             reduce using rule 10 (impressao -> MOSTRE VAR PONTO .)


state 27

    (11) impressao -> MOSTRE operacao PONTO .

    FACA            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    MOSTRE          reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SOME            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    MULTIPLIQUE     reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    REPITA          reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SE              reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    $end            reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    SENAO           reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)
    FIM             reduce using rule 11 (impressao -> MOSTRE operacao PONTO .)


state 28

    (12) operacao -> SOME VAR COM . VAR PONTO
    (13) operacao -> SOME VAR COM . NUM PONTO

    VAR             shift and go to state 35
    NUM             shift and go to state 36


state 29

    (14) operacao -> SOME NUM COM . NUM PONTO

    NUM             shift and go to state 37


state 30

    (15) operacao -> MULTIPLIQUE VAR POR . VAR PONTO
    (16) operacao -> MULTIPLIQUE VAR POR . NUM PONTO

    VAR             shift and go to state 38
    NUM             shift and go to state 39


state 31

    (17) operacao -> MULTIPLIQUE NUM POR . NUM PONTO
    (18) operacao -> MULTIPLIQUE NUM POR . VAR PONTO

    NUM             shift and go to state 40
    VAR             shift and go to state 41


state 32

    (19) repeticao -> REPITA NUM VEZES . DOISPONTOS cmds FIM

    DOISPONTOS      shift and go to state 42


state 33

    (20) selecao -> SE NUM ENTAO . cmds
    (21) selecao -> SE NUM ENTAO . cmds SENAO cmds
    (22) selecao -> SE NUM ENTAO . cmds SENAO cmds FIM
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . selecao
    (9) atribuicao -> . FACA VAR SER NUM PONTO
    (10) impressao -> . MOSTRE VAR PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) operacao -> . SOME VAR COM VAR PONTO
    (13) operacao -> . SOME VAR COM NUM PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (15) operacao -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) operacao -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) operacao -> . MULTIPLIQUE NUM POR NUM PONTO
    (18) operacao -> . MULTIPLIQUE NUM POR VAR PONTO
    (19) repeticao -> . REPITA NUM VEZES DOISPONTOS cmds FIM
    (20) selecao -> . SE NUM ENTAO cmds
    (21) selecao -> . SE NUM ENTAO cmds SENAO cmds
    (22) selecao -> . SE NUM ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmds                           shift and go to state 43
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    selecao                        shift and go to state 8

state 34

    (9) atribuicao -> FACA VAR SER NUM . PONTO

    PONTO           shift and go to state 44


state 35

    (12) operacao -> SOME VAR COM VAR . PONTO

    PONTO           shift and go to state 45


state 36

    (13) operacao -> SOME VAR COM NUM . PONTO

    PONTO           shift and go to state 46


state 37

    (14) operacao -> SOME NUM COM NUM . PONTO

    PONTO           shift and go to state 47


state 38

    (15) operacao -> MULTIPLIQUE VAR POR VAR . PONTO

    PONTO           shift and go to state 48


state 39

    (16) operacao -> MULTIPLIQUE VAR POR NUM . PONTO

    PONTO           shift and go to state 49


state 40

    (17) operacao -> MULTIPLIQUE NUM POR NUM . PONTO

    PONTO           shift and go to state 50


state 41

    (18) operacao -> MULTIPLIQUE NUM POR VAR . PONTO

    PONTO           shift and go to state 51


state 42

    (19) repeticao -> REPITA NUM VEZES DOISPONTOS . cmds FIM
    (2) cmds -> . cmd cmds
    (3) cmds -> . cmd
    (4) cmd -> . atribuicao
    (5) cmd -> . impressao
    (6) cmd -> . operacao
    (7) cmd -> . repeticao
    (8) cmd -> . selecao
    (9) atribuicao -> . FACA VAR SER NUM PONTO
    (10) impressao -> . MOSTRE VAR PONTO
    (11) impressao -> . MOSTRE operacao PONTO
    (12) operacao -> . SOME VAR COM VAR PONTO
    (13) operacao -> . SOME VAR COM NUM PONTO
    (14) operacao -> . SOME NUM COM NUM PONTO
    (15) operacao -> . MULTIPLIQUE VAR POR VAR PONTO
    (16) operacao -> . MULTIPLIQUE VAR POR NUM PONTO
    (17) operacao -> . MULTIPLIQUE NUM POR NUM PONTO
    (18) operacao -> . MULTIPLIQUE NUM POR VAR PONTO
    (19) repeticao -> . REPITA NUM VEZES DOISPONTOS cmds FIM
    (20) selecao -> . SE NUM ENTAO cmds
    (21) selecao -> . SE NUM ENTAO cmds SENAO cmds
    (22) selecao -> . SE NUM ENTAO cmds SENAO cmds FIM

    FACA            shift and go to state 9
    MOSTRE          shift and go to state 10
    SOME            shift and go to state 11
    MULTIPLIQUE     shift and go to state 12
    REPITA          shift and go to state 13
    SE              shift and go to state 14

    cmds                           shift and go to state 52
    cmd                            shift and go to state 3
    atribuicao                     shift and go to state 4
    impressao                      shift and go to state 5
    operacao                       shift and go to state 6
    repeticao                      shift and go to state 7
    selecao                        shift and go to state 8

state 43

    (20) selecao -> SE NUM ENTAO cmds .
    (21) selecao -> SE NUM ENTAO cmds . SENAO cmds
    (22) selecao -> SE NUM ENTAO cmds . SENAO cmds FIM

  ! shift/reduce conflict for SENAO resolved as shift
    FACA            reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    MOSTRE          reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    SOME            reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    MULTIPLIQUE     reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    REPITA          reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    SE              reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    $end            reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    FIM             reduce using rule 20 (selecao -> SE NUM ENTAO cmds .)
    SENAO           shift and go to state 53

  ! SENAO           [ reduce using rule 20 (selecao -> SE NUM ENTAO cmds .) ]


state 44

    (9) atribuicao -> FACA VAR SER NUM PONTO .

    FACA            reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    MOSTRE          reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    SOME            reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    MULTIPLIQUE     reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    REPITA          reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    SE              reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    $end            reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    SENAO           reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)
    FIM             reduce using rule 9 (atribuicao -> FACA VAR SER NUM PONTO .)


state 45

    (12) operacao -> SOME VAR COM VAR PONTO .

    FACA            reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    MOSTRE          reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    SOME            reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    MULTIPLIQUE     reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    REPITA          reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    SE              reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    $end            reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    SENAO           reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    FIM             reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)
    PONTO           reduce using rule 12 (operacao -> SOME VAR COM VAR PONTO .)


state 46

    (13) operacao -> SOME VAR COM NUM PONTO .

    FACA            reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    MOSTRE          reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    SOME            reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    MULTIPLIQUE     reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    REPITA          reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    SE              reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    $end            reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    SENAO           reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    FIM             reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)
    PONTO           reduce using rule 13 (operacao -> SOME VAR COM NUM PONTO .)


state 47

    (14) operacao -> SOME NUM COM NUM PONTO .
